Bug 1400254 - Don't apply fuzz workaround when appendWindowEnd is set. r=gerald

Someone changing the attribute appendWindowStart and appendWindowEnd can be expected to know what they are doing. As such, we don't need to make sure playback starts when content timestamps are broken.

MozReview-Commit-ID: EcPORuDHpF5

--HG--
extra : rebase_source : 2e29f07d8c4c52dfee360bac9e83b4d92b3eae38